--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "simple-peer": "^9.11.1",
+    "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
     "tailwindcss": "^3.2.2",
     "typescript": "4.8.4"
