--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "postcss": "^8.4.18",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
+    "react-player": "^2.11.2",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.3",
