--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
-    "@types/socket.io-client": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
@@ -24,6 +23,7 @@
     "react-player": "^2.11.2",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.5.4",
+    "socket.io-client": "^4.6.1",
     "tailwindcss": "^3.2.2",
     "typescript": "4.8.4"
   }
