--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@material-ui/core": "^4.12.4",
+    "@material-ui/core": "4.11.2",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "@types/node": "18.11.9",
