--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
     "react-player": "^2.12.0",
+    "react-youtube": "^10.1.0",
     "screenfull": "^6.0.2",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.5.4",
