--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.0.2",
     "postcss": "^8.4.18",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
     "react-player": "^2.12.0",
