--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@antmedia/webrtc_adaptor": "^2.5.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "4.11.2",
@@ -25,7 +24,7 @@
     "postcss": "^8.4.18",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-player": "^2.12.0",
     "screenfull": "^6.0.2",
