--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
+    "peerjs": "^1.4.7",
     "postcss": "^8.4.18",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
@@ -27,7 +28,6 @@
     "react-draggable": "^4.4.5",
     "react-player": "^2.12.0",
     "screenfull": "^6.0.2",
-    "simple-peer": "^9.11.1",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.6.1",
     "tailwindcss": "^3.2.2",
