--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "screenfull": "^6.0.2",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.6.1",
+    "sonner": "^1.2.4",
     "tailwindcss": "^3.2.2",
     "typescript": "4.8.4"
   }
